Add init for WheelSystem. Homogenize formatting of indentation to 2 spaces and line endings to lf.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
     "bin/": true,
     ".classpath": true,
     ".project": true
-  }
+  },
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "files.eol": "\n",
 }
