--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,5 @@
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
   "files.eol": "\n",
+  "java.dependency.packagePresentation": "hierarchical",
 }
